# artemis-captioning

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  train.py
data/embeddings/: glove_embeddings.json  tfidf_embeddings.json  word2vec_embeddings.json
data/processed/: selected_images.json  vocabulary.json
data/processed/splits/: test.json  train.json  val.json
data/processed/splits_colab/: test.json  val.json
data/processed/splits_nfd/: test.json  val.json
docs/: COLAB_INSTRUCTIONS.md  PARALLEL_TRAINING.md  RESULTS_SUMMARY.md
models/: __init__.py  cnn_lstm.py  vision_transformer.py
notebooks/: Colab_Multi_Model_Training.ipynb  Colab_Sequential_Training.ipynb  Colab_Train_CNN_GloVe.ipynb  Colab_Train_CNN_Large.ipynb  Colab_Train_ViT.ipynb  Colab_Training.ipynb
scripts/: analyze_dataset.py  batch_evaluate.py  create_colab_splits.py  create_nfd_splits.py  create_splits.py  diagnose_colab_encoding.py  predict.py  prepare_data_package.py  prepare_dataset.py  preprocess_images.py  quick_train_test.py  run_experiments.py  test_embeddings.py  test_full_training.py  test_model.py  test_model_with_embeddings.py  test_training.py  train_hyperparameter.py  train_local.py  train_local_vit.py  train_second_laptop.py  train_variations.py
utils/: constants.py  data_loader.py  embeddings.py  evaluation.py  image_preprocessing.py  text_preprocessing.py  visualization.py
